Commit of change 1

--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,9 @@
 
 Esta es la historia de Juan Pablo Jimenez JuanPabloJimenezEsclusa
 
-Juan tiene 41 añitos de edad y nació en Caracas Venezuela
+Juan tiene 42 añitos de edad y nació en Caracas Venezuela,
+
+He vivido en 3 paises
 
 Hoy vive en Barcelona España con su Esposa e hijos
 
