--- a/history.txt
+++ b/history.txt
@@ -7,4 +7,8 @@ He vivido en 3 paises
 
 Hoy vive en Barcelona España con su Esposa e hijos
 
+Ahora vamos a hablar de su vida
+
+
+Que mas podemos decir
 
