--- a/history.txt
+++ b/history.txt
@@ -1,14 +1,8 @@
 
 Esta es la historia de Juan Pablo Jimenez JuanPabloJimenezEsclusa
 
-Juan tiene 42 añitos de edad y nació en Caracas Venezuela,
-
-He vivido en 3 paises
+Juan tiene 41 añitos de edad y nació en Caracas Venezuela
 
 Hoy vive en Barcelona España con su Esposa e hijos
 
-Ahora vamos a hablar de su vida
-
-
-Que mas podemos decir
 
